# visual_assistant

./: .env.example  .gitignore  .worktreeinclude  CLAUDE.md  README.md  TASKS.md  VisualAssistant-PRD.md  config.yaml  pyproject.toml  requirements.txt  设计文档.md
contracts/: CONTRACTS.md  __init__.py  answer_guard.py  audio.py  config_push.py  config_schema.py  control.py  envelope.py  errors.py  frame.py  message_types.py  mock.py  orchestration.py  posture.py  protocol.py  session.py  state_machine.py  tools.py  transcript.py  vision.py  voice.py  weather.py  working_memory.py
scripts/: smoke_real_planner.py
server/: __init__.py  main.py  ws_router.py
server/a_core/: __init__.py  dispatch.py  gap_arbiter.py  guardrails.py  orchestrator.py  rails.py  session.py  tool_registry.py  working_memory_store.py
server/b_voice/: __init__.py  asr_adapter.py  tts_adapter.py
server/c_vision/: __init__.py  vision_tools.py
server/e_skills/: __init__.py  prompts.py
server/llm/: __init__.py  providers.py
server/relay/: __init__.py  live_bridge.py  tool_dispatch.py
server/skills/: __init__.py  prompts.py
server/tools/: __init__.py  vision_tools.py  weather.py
tests/: test_asr_adapter.py  test_check_draft_tool.py  test_config_push_smoke.py  test_contracts_validate.py  test_e_open_summary.py  test_e_prompts.py  test_gap_arbiter.py  test_guardrails.py  test_open_dialogue.py  test_orchestrator_planner.py  test_orchestrator_skeleton.py  test_session_live.py  test_tool_registry_binding.py  test_tool_sequence_consistency.py  test_tts_adapter.py  test_vision_observe.py  test_vision_read_problem.py  test_weather_tool.py  test_working_memory.py  test_ws_audio_uplink.py
tests/fixtures/: audio.jsonl  config_push.jsonl  control.jsonl  frame.jsonl  (+14 more)
web/: index.html  styles.css
(+10 files in other folders)
